--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
+    "sinon": "^6.3.4",
+    "sinon-chai": "^3.2.0",
+    "sinon-stub-promise": "^4.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
