--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register --require @babel/polyfill",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register --require @babel/polyfill --watch --reporter=nyan",
     "test:coverage": "nyc npm test",
-    "coveralls": "npm test:coverage && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
   },
   "files": [
     "dist",
