--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spotify-wrapper-js",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "A wrapper to work with the Spotify Web API.",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "clear": "rimraf lib dist",
     "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
